# OSS-guardian

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
src/: config.py
src/api/: schemas.py  server.py
src/crew/: agents.py  callbacks.py  manager.py  tasks.py
src/static/: index.html  script.js  style.css
src/utils/: report_generator.py
tests/: test_api.py  test_gemini_full.py  test_litellm_simple.py  test_llm.py  test_object_detection.py  verify_frontend.py  verify_pdf.py
